test/parser.d/should_fail/indentation5.souc.bad
main() = do
	x = 5
    print $x
